# os-vm-expire

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: main.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/api-ref/: conf.py  index.rst  parameters.yaml  vmexclude-create-req.json  vmexclude.inc  vmexpire.inc  (+2 more)
etc/logrotate.d/: os-vm-expire
etc/os-vm-expire/: osvmexpire-api-paste.ini  policy.json
etc/oslo-config-generator/: osvmexpire.conf  osvmexpire.conf.sample  policy.conf  policy.json.sample
os_vm_expire/: context.py  i18n.py  version.py
os_vm_expire/api/: __init__.py  app.py  app.wsgi  hooks.py
os_vm_expire/cmd/: cleaner.py  db_manage.py  expire_manage.py  worker.py
os_vm_expire/common/: __init__.py  config.py  hrefs.py  utils.py
os_vm_expire/model/: clean.py  models.py  repositories.py
os_vm_expire/queue/: __init__.py  server.py
os_vm_expire/tests/: database_utils.py  test_os_vm_expire.py  utils.py
releasenotes/notes/: add_feature_exclude-8358c8e8d7c584cb.yaml  add_max_vm_total_duration-f75e758644116db6.yaml  add_notif_info-6fbcfb78d9165628.yaml  add_project_name_to_email-15dc628946272529.yaml  add_solo_log-531adc57117ff05c.yaml  add_transaction_hook-cccc18bd319ea60c.yaml  bug-7-fe7fe07e44247ca5.yaml  first-release-2f3004c1e34de256.yaml  fix_cleaner-ce4b130006c4b1f2.yaml  fix_cleaner_checks-f7e86e0d7a891e39.yaml  fix_missing_opt-b3e29e4e3f21dc9b.yaml  fix_otaca-cf83a54348f5f519.yaml  fix_rollback_cleaner-d6914800a105c691.yaml  fix_vm_notfound-2bdd03e6b0f1ceb4.yaml  get_all_tenants-cec088091dcb888b.yaml  reset_notifications_on_extend-8a7ef2c218638988.yaml  use_pretty_table-2c16920d8cf2d939.yaml
releasenotes/source/: conf.py  index.rst
(+41 files in other folders)
