[metadata]
name = os-vm-expire
summary = Manage VM expiration and deletion
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    os_vm_expire

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_vm_expire/locale
domain = os_vm_expire

[update_catalog]
domain = os_vm_expire
output_dir = os_vm_expire/locale
input_file = os_vm_expire/locale/os_vm_expire.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_vm_expire/locale/os_vm_expire.pot

[entry_points]
oslo.policy.policies =
    osvmexpire = os_vm_expire.common.policies:list_rules

console_scripts =
    osvmexpire-manage = os_vm_expire.cmd.expire_manage:main
    osvmexpire-db-manage = os_vm_expire.cmd.db_manage:main
    osvmexpire-worker = os_vm_expire.cmd.worker:main

wsgi_scripts =
    osvmexpire-wsgi-api = os_vm_expire.api.app:get_api_wsgi_script

oslo.config.opts =
    osvmexpire.common.config = os_vm_expire.common.config:list_opts

oslo.config.opts.defaults =
    osvmexpire.common.config = os_vm_expire.common.config:set_middleware_defaults
